--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "src/servidor.js",
   "scripts": {
-    "start": "node --max-old-space-size=500 .",
+    "start": "node .",
     "start:dev": "nodemon -e 'js,html,handlebars,yaml' servidor.js",
     "test": "nodemon --exec mocha --recursive"
   },
